--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
+    "materialize-css": "^1.0.0",
     "mysql2": "^1.5.3",
     "sequelize": "^4.38.0"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.1",
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
     "eslint": "^4.19.1",
