--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
     "username": "root",
-    "password": "root",
-    "database": "movies_db",
+    "password": "MyNewPass",
+    "database": "animals_db",
     "host": "localhost",
     "dialect": "mysql"
   },
